--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -5,7 +5,14 @@
     padding: 0.5rem 1rem;
     border-bottom: #fde6b8 1px solid;
     display: flex;
+    
 }
+.item:hover{
+    background-color: #fde6b8 ;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 .img-item,
 .byke-placeholder {
     width: 4rem;
@@ -50,4 +57,24 @@
     height: 0.8rem;
     opacity: 0.9;
     margin-right: 0.3rem;
+}
+
+.paging{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
+    color: #5f5f5f;
+}
+.arrow{
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    padding: 0.5rem;
+    margin: 0 0.4rem;
+}
+.arrow:hover{
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #ffd47c;
 }
